RESOLVED FIXED87060
Fix bug in paintNinePieceImage exposed by subpixel change
https://bugs.webkit.org/show_bug.cgi?id=87060
Summary Fix bug in paintNinePieceImage exposed by subpixel change
Emil A Eklund
Reported 2012-05-21 17:14:13 PDT
Fix a rounding bug paintNinePieceImage.
Attachments
Patch (71.85 KB, patch)
2012-05-21 17:16 PDT, Emil A Eklund
leviw: review+
Emil A Eklund
Comment 1 2012-05-21 17:16:41 PDT
Levi Weintraub
Comment 2 2012-05-21 17:20:20 PDT
Comment on attachment 143143 [details] Patch Looks good. I should also comment that this only affects Chromium for now, and Chromium-Mac is the only other platform that may need rebaselines associated with this.
Emil A Eklund
Comment 3 2012-05-21 17:24:01 PDT
Note You need to log in before you can comment on or make changes to this bug.