Fix bug in paintNinePieceImage exposed by subpixel change https://bugs.webkit.org/show_bug.cgi?id=87060

Reviewed by Levi Weintraub.

Source/WebCore:

Fix rounding in paintNinePieceImage where the left/right images where
drawn on subpixel bounds.

Covered by existing tests.

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::paintNinePieceImage):

LayoutTests:

* platform/chromium-linux/fast/borders/inline-mask-overlay-image-outset-expected.png: Removed.
* platform/chromium-linux/fast/borders/inline-mask-overlay-image-outset-vertical-rl-expected.png:
* platform/chromium-win/fast/borders/border-image-side-reduction-expected.png:
* platform/chromium-win/fast/borders/inline-mask-overlay-image-outset-expected.png:


Canonical link: https://commits.webkit.org/104722@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117855 268f45cc-cd09-0410-ab3c-d52691b4dbfc